# challenge

./: LICENSE  README.md
debruijn/: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  Simple.lhs  Subst.lhs  Sysf.lhs  bibliography.md  cps.lhs  dbdefunc.hs  dbdefunc.v  debruijn.cabal  debruijn.md  debruijn1.md  debruijn2.md  debruijn3.md  debruijn4.md  hie.yaml  nat.lhs  overview.md  polytyped.v  stack.yaml  sysf.lhs  typeCheck.lhs
debruijn/bench/: Lambda.hs  Lennart.hs  Main.hs
debruijn/coq/: sysf.v  sysf2.v  sysf3.v
debruijn/doc/: chalmers-2020-v2.pptx  chalmers-2020.pptx
debruijn/lhs/: Cps.lhs  Imports.lhs  Poly.lhs  PolyTyped.lhs  Reginterp.lhs  Simple.lhs  SimpleTyped.lhs  Subst.lhs  SubstProperties.lhs  SubstTyped.lhs  SystemF.lhs  TypeCheck.lhs  WellScoped.lhs  dbdefunc.hs  sysf.md
debruijn/src/: AssertEquality.hs  Cps.hs  Debruijn.lhs  HList.hs  Imports.hs  KindApp.hs  Multisub.lhs  Nat.hs  Nat.lhs  Poly.hs  Poly.lhs  PolyScoped.hs  PolyTyped.hs  PolyTyped.lhs  PolyTypedOpt.hs  Simple.hs  Simple.lhs  SimpleScoped.hs  SimpleTyped.hs  SimpleTyped.lhs  SimpleTypedInf.hs  SimpleTypedNorm.hs  SimpleTypedOpt.hs  Subst.hs  Subst.lhs  SubstInf.hs  SubstProperties.hs  SubstProperties.lhs  SubstScoped.hs  SubstTyped.hs  SubstTyped.lhs  SubstTypedFun.hs  SubstTypedInf.hs  SubstTypedOpt.hs  Sysf.lhs  TypeCheck.hs  TypeCheck.lhs
