name:                debruijn
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Stephanie Weirich
maintainer:          sweirich@cis.upenn.edu
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10



library
  exposed-modules:     Subst
                       SubstScoped
                       SubstProperties
                       SubstTyped
                       SubstTypedOpt
                       Simple
                       SimpleScoped
                       SimpleTyped
                       SimpleTypedOpt
                       Poly
                       PolyScoped
                       PolyTyped
                       PolyTypedOpt
                       Cps
                       TypeCheck

  other-modules:       AssertEquality
                       Imports
                       Nat
                       
  -- other-extensions:
  build-depends:       base >=4.13,
                       singletons >= 2.6,
                       QuickCheck >= 2.12,
                       Cabal

  hs-source-dirs:      src

  default-language:    Haskell2010
  
  default-extensions:  AllowAmbiguousTypes
                       DataKinds
                       DefaultSignatures
                       DeriveFunctor
                       EmptyCase
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       IncoherentInstances
                       InstanceSigs
                       KindSignatures
                       MultiParamTypeClasses
                       NoStarIsType
                       PartialTypeSignatures
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilyDependencies
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances

  ghc-options:         -fwarn-incomplete-patterns


